@@ -334,6 +334,11 @@ Installing Ant / Optional Tasks</a> section above.</p>
     <td><a href="http://www.scriptics.com/java" target="_top">www.scriptics.com/java</a></td>
   </tr>
   <tr>
+    <td>BeanShell JAR(s)</td>
+    <td>BeanShell with script task</td>
+    <td><a href="http://www.beanshell.org" target="_top">www.beanshell.org</a></td>
+  </tr>
+  <tr>
     <td>netcomponents.jar</td>
     <td>ftp and telnet tasks</td>
     <td><a href="http://www.savarese.org/oro/downloads/index.html#NetComponents"
