@@ -76,6 +76,9 @@ public class Script extends Task {
 
     // Register BeanShell ourselves, since BSF does not
     // natively support it (yet).
+    // This "hack" can be removed once BSF has been
+    // modified to support BeanShell or more dynamic
+    // registration.
     static {
         BSFManager.registerScriptingEngine( "beanshell",
             "bsh.util.BeanShellBSFEngine", new String [] { "bsh" } );
